# WIMU-Symbolic-Music-Similarity

./: .gitignore  LICENSE  Makefile  README.md  dataset-ingestion.py  demo.py  features_print.py  generate_sample_results.py  prototype_readiness_report.md  pyproject.toml  verify_prototype.py
.github/workflows/: tests.yml
configs/: config.yaml
docs/: design_proposal.md  literature.md  progress.md
features/: aggregation.py  features_extraction.py  histograms.py  music_features.py  scalars.py
ingestion/: data_providers.py  dataset-ingestion.py
similarity/: check_similarity.py  jsd.py
tests/: conftest.py  test_end_to_end.py  test_features_extraction.py  test_histograms.py  test_similarity.py
utils/: features_extraction_example.py
